Checks for customer data in script.js for cart. Animation Postiion fix Things left: 1. Point Redemption, 2. CSS for Game Page

--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
         <a href="index.html"><img src="Images/Logo.png" alt="Logo" id="logo"></a>
         <div id="imgbutton">
             <a href="login.html"><img src="Images/Account.png" alt="Login" class="sidepng"></a>
-            <a href="cart.html"><img src="Images/Cart.png" alt="Cart" class="sidepng"></a>
+            <a href="cart.html" onclick="check(event)"><img src="Images/Cart.png" alt="Cart" class="sidepng"></a>
         </div>
     </div>
     
