--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css_folder/tic_tac_toe.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/> -->
     <!-- <link rel="stylesheet" href="css_folder/normalize.css"> -->
-    <title>Document</title>
+    <title>Tic Tac Toe</title>
 
 </head>
 <body>
