--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css_folder/normalize.css">
     <link rel="stylesheet" href="css_folder/cart.css">
-    <title>Document</title>
+    <title>Cart</title>
 </head>
 <body>
 
