--- a/pay_to_win.html
+++ b/pay_to_win.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css_folder/normalize.css">
     <link rel="stylesheet" href="css_folder/pay_to_win.css">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>Games</title>
 </head>
 <body>
     <!--Header-->
     <header w3-include-html="header.html" class="bg-light"> 
     </header>
+
+
+    <!-- Notify User to Login -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <strong class="me-auto">TechStudio</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+          You must login to play games.
+        </div>
+      </div>
+    </div>
+
+
 
     <section class = "flex-box">
         <div>
@@ -20,29 +37,34 @@
             <h3>2. Tic Tac Toe</h3>
         </div>
         <div class = "flex-box row">
-            <a href = "wheel.html" class = "pageLink">
+            <!-- <a href = "wheel.html" class = "pageLink" id = "game1" onclick="checkCustomerData(event)"> -->
+            <a href = "wheel.html" class = "pageLink" id = "game1" onclick="check(event)">
                 <div>
                 <img class = "game-pic" src = "Images/wheel.png">
                 <h4>Spin the wheel</h4>
                 </div>
             </a>
-            <a href = "tic_tac_toe.html" class = "pageLink">
+            <a href = "tic_tac_toe.html" class = "pageLink" id = "game2" onclick="check(event)">
                 <div>
                     <img class = "game-pic" src = "Images/Tic-Tac-Toe.png">
                     <h4>Tic Tac Toe</h4>
                 </div>
             </a>    
         </div>
-        
-    </section>
 
+    </section>
+    
 
 
 
     <!--Footer-->
     <footer w3-include-html="footer.html" class="bg-light">
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <script src="js_folder/script.js"></script>
+    <script src="js_folder/games.js"></script>
 </body>
 </html>
