Possible Final Submission

--- a/pay_to_win.html
+++ b/pay_to_win.html
@@ -29,14 +29,14 @@
 
 
 
-    <section class = "flex-box">
+    <section class = "box">
         <div>
             <h1>Play Games to win prizes and earn more points!</h1>
             <h2>Games:</h2>
             <h3>1. Spin the wheel</h3>
             <h3>2. Tic Tac Toe</h3>
         </div>
-        <div class = "flex-box row">
+        <div class = "flex-box">
             <!-- <a href = "wheel.html" class = "pageLink" id = "game1" onclick="checkCustomerData(event)"> -->
             <a href = "wheel.html" class = "pageLink" id = "game1" onclick="check(event)">
                 <div>
@@ -54,7 +54,7 @@
 
     </section>
     
-
+    <br>
 
 
     <!--Footer-->
