--- a/wheel.html
+++ b/wheel.html
@@ -13,7 +13,8 @@
     </header>
 
     <br>
-    <!--Wheel game-->
+    <!--Wheel game
+      referenced from: https://workshops.hackclub.com/spinning_wheel/-->
     <div id="container">
         <div>
             <h2>How to play:</h2>
